###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################


module(
    name = "opengl_app",
    version = "1.0",
)

bazel_dep(name = "glm", version = "1.0.3")